2008-05-10  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/tools/gimprectangleselecttool.c
	(gimp_rectangle_select_tool_cancel): Don't forget updating the
	default aspect ratio when cancelling a rectangle select.

2008-05-10  Manish Singh  <yosh@gimp.org>

	Merged from trunk:

	* plug-ins/common/poppler.c: Support poppler 0.8.x.

2008-05-10  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_button_release): Update the tool options
	after a release; the rectangle might change if a rubber-banding is
	cancelled.

2008-05-10  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/tools/gimpcroptool.c: Add a GimpRectangleTool::cancel()
	implementation that updates default aspect ratio when cancelling a
	crop.

2008-05-10  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/tools/gimpcroptool.[ch]: Keep track of the current image and
	manage a subscription to "size-changed" so that default aspect
	ratio is properly updated. (Bug #532057.)
	(gimp_crop_tool_execute): No need to explicitly call
	gimp_crop_tool_update_option_defaults() any longer.

2008-05-06  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpwidgets/gimpcolorprofilestore.c
	(gimp_color_profile_store_load_profile): check if the file exists
	before adding it to the history. Fixes bug #528958.

2008-05-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/unsharp-mask.c (gen_convolve_matrix): fixed
	algorithm to calculate the center value. Fixes bug #530077.

2008-04-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/hue-saturation.c (hue_saturation): applied patch from
	Michael Deal that fixes use of the overlap option (bug #527085).

2008-04-21  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/curve_bend.c (run): fixed handling of
	"argc-lower-val-y" PDB parameter.

2008-04-16  Sven Neumann  <sven@gimp.org>
